<resources>
    <string name="app_name">Ofix</string>
    <string name="descri_o">Descrição</string>
    <string name="nome">nome</string>
    <string name="categoria">categoria</string>
    <string name="codigo">codigo</string>
    <string name="status">status</string>
    <string name="custo">custo</string>
    <string name="lucro">lucro</string>
    <string name="valorVenda">valorVenda</string>
    <string name="venda">valorVenda</string>
    <string name="Venda">venda</string>
    <string name="data">data</string>


    <string-array name="nome">
        <item>Porta</item>
        <item>Pneu</item>
        <item>Cambio</item>
        <item>Pistão</item>
        <item>Baterias</item>
        <item>Escapamento</item>
        <item>Volante</item>
        <item>Retrovizor</item>
    </string-array>

    <string-array name="categoria">
        <item>Lorem Ipsum</item>
        <item>Lorem Ipsum</item>
        <item>Lorem Ipsum</item>
        <item>Lorem Ipsum</item>
        <item>Lorem Ipsum</item>
        <item>Lorem Ipsum</item>
        <item>Lorem Ipsum</item>
        <item>Lorem Ipsum</item>
    </string-array>

    <string-array name="codigo">
        <item>Nº 21</item>
        <item>Nº 7</item>
        <item>Nº 999</item>
        <item>Nº 6</item>
        <item>Nº 979</item>
        <item>Nº 89</item>
        <item>Nº 60</item>
        <item>Nº 77</item>
    </string-array>

    <string-array name="valorVenda">
        <item>R$ 200,00</item>
        <item>R$ 300,00</item>
        <item>R$ 400,00</item>
        <item>R$ 500,00</item>
        <item>R$ 600,00</item>
        <item>R$ 700,00</item>
        <item>R$ 800,00</item>
        <item>R$ 900,00</item>
    </string-array>

    <string-array name="status">
        <item>Cancelado</item>
        <item>Aberto</item>
        <item>Aprovado</item>
        <item>Concluído </item>
        <item>Aprovado</item>
        <item>Concluído</item>
        <item>Cancelado</item>
        <item>Concluído</item>

    </string-array>

    <string-array name="custo">
        <item>R$ 100,00</item>
        <item>R$ 200,00</item>
        <item>R$ 300,00</item>
        <item>R$ 400,00 </item>
        <item>R$ 500,00</item>
        <item>R$ 600,00</item>
        <item>R$ 700,00</item>
        <item>R$ 800,00</item>

    </string-array>

    <string-array name="lucro">
        <item>40%</item>
        <item>60%</item>
        <item>50%</item>
        <item>60% </item>
        <item>60%</item>
        <item>60%</item>
        <item>60%</item>
        <item>60%</item>

    </string-array>

    <string-array name="venda">
        <item>R$ 300,00</item>
        <item>R$ 400,00</item>
        <item>R$ 500,00</item>
        <item>R$ 200,00 </item>
        <item>R$ 300,00</item>
        <item>R$ 200,00</item>
        <item>R$ 1140,00</item>
        <item>R$ 423,00</item>

    </string-array>
</resources>