<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="160dp"
    android:layout_margin="3dp"
    android:id="@+id/mainLayout"
    app:cardCornerRadius="20dp"
    app:cardUseCompatPadding="true"
    app:cardElevation="3dp"

    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/myText1"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/descri_o"
            android:textColor="#303030"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:fontFamily="sans-serif-medium"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/myText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nome"
            android:layout_marginStart="15dp"
            android:layout_marginTop="100dp"
            android:textSize="16sp"
            android:textColor="#5e5e5e"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.153"
            app:layout_constraintStart_toStartOf="@+id/myText1"
            android:fontFamily="sans-serif-medium"
            app:layout_constraintTop_toBottomOf="@+id/myText1" />

        <TextView
            android:id="@+id/myText3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/categoria"
            android:textSize="16sp"
            android:textColor="#5e5e5e"
            android:layout_marginStart="230dp"
            android:layout_marginTop="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.153"
            app:layout_constraintStart_toStartOf="@+id/myText2"
            android:fontFamily="sans-serif-medium"
            app:layout_constraintTop_toBottomOf="@+id/myText2" />

        <TextView
            android:id="@+id/myText4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/codigo"
            android:textSize="16sp"
            android:textColor="#5e5e5e"
            android:layout_marginStart="15dp"
            android:layout_marginTop="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.153"
            app:layout_constraintStart_toStartOf="@+id/myText3"
            android:fontFamily="sans-serif-medium"
            app:layout_constraintTop_toBottomOf="@+id/myText3" />

        <TextView
            android:id="@+id/myText5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:text="@string/status"
            android:textSize="16sp"
            android:textColor="#5e5e5e"
            android:layout_marginStart="230dp"
            android:layout_marginTop="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.153"
            app:layout_constraintStart_toStartOf="@+id/myText4"
            android:fontFamily="sans-serif-medium"
            app:layout_constraintTop_toBottomOf="@+id/myText4" />
    </RelativeLayout>
</com.google.android.material.card.MaterialCardView>