<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:orientation="vertical" android:layout_width="match_parent"
android:layout_height="match_parent"
android:layout_margin="3dp"
android:id="@+id/mainLayout"
app:cardCornerRadius="20dp"
app:cardUseCompatPadding="true"


    app:cardElevation="3dp"
    >

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintBottom_toBottomOf="parent">

    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="270dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/rounded_corner"
        android:textColor="#ffffff"
        android:textAllCaps="false"
        android:fontFamily="sans-serif-medium"
        android:textSize="17dp"
        android:text="Cadastro Básico" />

    <Button
        android:id="@+id/button5"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="390dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/rounded_corner"
        android:textColor="#ffffff"
        android:textAllCaps="false"
        android:fontFamily="sans-serif-medium"
        android:textSize="17dp"
        android:text="Preços" />

    <Button
        android:id="@+id/button6"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="510dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/rounded_corner"
        android:textColor="#ffffff"
        android:textAllCaps="false"
        android:fontFamily="sans-serif-medium"
        android:textSize="17dp"
        android:text="Estoque" />

    <TextView
        android:id="@+id/nome"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/descri_o"
        android:textColor="#303030"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:fontFamily="sans-serif-medium"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/codigo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nome"
        android:layout_marginStart="15dp"
        android:layout_marginTop="180dp"
        android:textSize="16sp"
        android:textColor="#5e5e5e"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.859"
        app:layout_constraintStart_toStartOf="parent"
        android:fontFamily="sans-serif-medium"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/categoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:text="@string/categoria"
        android:textSize="16sp"
        android:textColor="#5e5e5e"
        android:layout_marginStart="230dp"
        android:layout_marginTop="180dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.859"
        app:layout_constraintStart_toStartOf="parent"
        android:fontFamily="sans-serif-medium"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/valorVenda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:text="@string/codigo"
        android:textSize="16sp"
        android:textColor="#5e5e5e"
        android:layout_marginStart="15dp"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.859"
        app:layout_constraintStart_toStartOf="parent"
        android:fontFamily="sans-serif-medium"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="230dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="40dp"
        android:text="@string/status"
        android:textColor="#5e5e5e"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.859"
        app:layout_constraintStart_toStartOf="parent"
        android:fontFamily="sans-serif-medium"
        app:layout_constraintTop_toBottomOf="@+id/title" />
</RelativeLayout>
</com.google.android.material.card.MaterialCardView>